--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GITHUB_CLIENT_ID=your_client_id
-GITHUB_CLIENT_SECRET=your_client_secret
+GITHUB_CLIENT_ID=Ov23liout2KO2NH8VV37
+GITHUB_CLIENT_SECRET=8c1fdebaa0352b27ed0a4516a487a49d38544370
 FRONTEND_URL=https://github-tracker-frontend.vercel.app/
-BACKEND_URL=https://mybackend.com
-JWT_SECRET=myverysecurejwtsecret
+BACKEND_URL=https://github-tracker-backend.onrender.com
+JWT_SECRET=pIk6qUagP49fN21Ty-NVvb4jLWn6LzczEp879JbRed_kK7TSF1KJ8o0pzwSgFcwxRuNsurqxuMtrWOGauAOTtQ
