--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GITHUB_CLIENT_ID=Ov23liout2KO2NH8VV37
 GITHUB_CLIENT_SECRET=8c1fdebaa0352b27ed0a4516a487a49d38544370
-FRONTEND_URL=https://github-tracker-frontend.vercel.app/
+FRONTEND_URL=https://github-tracker-frontend.vercel.app
 BACKEND_URL=https://github-tracker-backend-5bu3.onrender.com
 JWT_SECRET=pIk6qUagP49fN21Ty-NVvb4jLWn6LzczEp879JbRed_kK7TSF1KJ8o0pzwSgFcwxRuNsurqxuMtrWOGauAOTtQ
 REDIS_URL = rediss://githubtracker:1412Sengeel*@redis-16190.c14.us-east-1-2.ec2.redns.redis-cloud.com:16190
