--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ FRONTEND_URL=https://github-tracker-frontend.vercel.app
 BACKEND_URL=https://github-tracker-backend-5bu3.onrender.com
 JWT_SECRET=pIk6qUagP49fN21Ty-NVvb4jLWn6LzczEp879JbRed_kK7TSF1KJ8o0pzwSgFcwxRuNsurqxuMtrWOGauAOTtQ
 REDIS_URL=rediss://githubtracker:1412Sengeel%2A@redis-16190.c14.us-east-1-2.ec2.redns.redis-cloud.com:16190
+ENV=production
